<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".IceCreamItemAdapter">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/iceCreamImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            app:srcCompat="@drawable/placeholder" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/red"
            android:padding="20dp">

            <TextView
                android:id="@+id/iceCreamName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vanilia"
                android:textColor="@color/yellow"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/iceCreamPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_1euro"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iceCreamName" />

            <Button
                android:id="@+id/toCart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/style_rounded_button"
                android:paddingLeft="25dp"
                android:paddingRight="25dp"
                android:shadowColor="#000000"
                android:text="@string/kosarba"
                android:textColor="@color/red"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>


</androidx.cardview.widget.CardView>